package com.example.chapter_02;

public class Dog implements Mammal {

    public Dog() {
        super();
    }

    public String name() {
        return "Dog";
    }

    public String makeSound() {
        return "Woof!";
    }

}
