package com.example.chapter_02;

public interface Mammal {

    public String name();

    public String makeSound();

}
