package com.example.chapter_08.abstract_classes;

public interface Nameable {
    String getName();
    void   setName(String name);
}
